   (Github pull request #75)

 - Allow use of $ENV{DBDPG_TEMPDIR} to shorten test directory paths.
   (Github issue #78)

 - Switch from DynaLoader to XSLoader
   [Todd Rinaldo <toddr@cpan.org>]
   (Github pull request #76)

 - Fix missing "use File::Temp"
   [Greg Sabino Mullane]
   (Github issue #79)

 - Use non-root user when calling pg_resetwal
   [Greg Sabino Mullane]


Version 3.15.0 (released May 21, 2021)

 - Correctly pull back pg_async status from statement handle.
   Previously, $dbh->{pg_async} would return undef.
   [Greg Sabino Mullane]
   (RT ticket #136553)

 - Adjust tests for the fact that reltuples can be -1 in Postgres
     version 14 and later. This is mostly reflected in the CARDINALITY
     column for $dbh->statistics_info.
   [Greg Sabino Mullane]

 - Remove the experimental 'fulltest' Makefile target.
   [Greg Sabino Mullane]
   (RT ticket #136567)


Version 3.14.2  (released August 13, 2020)

 - Fix ENV typo in the test suite
   [Gregor Herrmann]

 - Renamed and enhanced test helper script: dbdpg_test_postgres_versions.pl
   [Greg Sabino Mullane]


Version 3.14.1  (released August 12, 2020)

 - Force the version string so undefined errors in the "driver" sub go away.
   [Greg Sabino Mullane]
   (RT ticket #83057)


Version 3.14.0  (released July 19, 2020)

 - The $dbh->primary_key_info and $dbh->foreign_key_info methods will now always return 
     a statement handle, even with no matches. Previously, they returned undef directly.
   Callers can check if the returned handle contains any rows.
   [Greg Sabino Mullane]

 - The $dbh->tables method will always return a list, even if it is empty.
   [Greg Sabino Mullane]

 - Add pg_lo_tell64, pg_lo_seek64, and pg_lo_truncate64, for anyone dealing 
     with really, really, really large 'large objects'. Requires Postgres 9.3 or better.
   [Greg Sabino Mullane]
   (RT ticket #123561)

 - Allow test to run again when using a non-superuser to connect
   [Greg Sabino Mullane]
   (RT ticket #132865)
