@@ -22,6 +22,9 @@ Version ?? (unreleased)
  - Use non-root user when calling pg_resetwal
    [Greg Sabino Mullane]
 
+ - Automatically use 64-bit versions of large object functions when
+   available
+   [Dagfinn Ilmari Mannsåker, David Christensen]
 
 Version 3.15.0 (released May 21, 2021)
 
